force-app/main/default/objects/Staff__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <description>Company Name</description>
    <inlineHelpText>Company Name</inlineHelpText>
    <label>Company</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B3 Group</fullName>
            </value>
            <value>
                <fullName>VETS</fullName>
            </value>
            <value>
                <fullName>ISC</fullName>
            </value>
            <value>
                <fullName>LongView</fullName>
            </value>
            <value>
                <fullName>AdaptiveS</fullName>
            </value>
            <value>
                <fullName>ASRI</fullName>
            </value>
            <value>
                <fullName>FirstTek</fullName>
            </value>
            <value>
                <fullName>GrantT</fullName>
            </value>
            <value>
                <fullName>Jacer</fullName>
            </value>
            <value>
                <fullName>PingWind</fullName>
            </value>
            <value>
                <fullName>Rios</fullName>
            </value>
            <value>
                <fullName>SRS</fullName>
            </value>
            <value>
                <fullName>Engility</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>