force-app/main/default/objects/Staff__c/fields/Completed_PISA_ROB_training__c.field-meta.xml
<CustomField>
    <fullName>Completed_PISA_ROB_training__c</fullName>
    <label>Completed PISA/ROB training</label>
    <type>Date</type>
</CustomField>