force-app/main/default/objects/Staff__c/fields/Completed_Rational_training__c.field-meta.xml
<CustomField>
    <fullName>Completed_Rational_training__c</fullName>
    <label>Completed Rational training</label>
    <type>Date</type>
</CustomField>