force-app/main/default/objects/Staff__c/fields/Full_Time_or_Remote__c.field-meta.xml
<CustomField>
    <fullName>Full_Time_or_Remote__c</fullName>
    <description>Are you working remote full time?</description>
    <inlineHelpText>Are you working remote full time?</inlineHelpText>
    <label>Full-Time Remote?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>