force-app/main/default/objects/Staff__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>Work Location</description>
    <inlineHelpText>Location; City, State</inlineHelpText>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Austin, TX</fullName>
            </value>
            <value>
                <fullName>Seattle, WA</fullName>
            </value>
            <value>
                <fullName>Las Vegas, NV</fullName>
            </value>
            <value>
                <fullName>Ashland, OR</fullName>
            </value>
            <value>
                <fullName>Frisco, TX</fullName>
            </value>
            <value>
                <fullName>Hockessin, DE</fullName>
            </value>
            <value>
                <fullName>SanDiego, CA</fullName>
            </value>
            <value>
                <fullName>Bouye, MD</fullName>
            </value>
            <value>
                <fullName>South Carolina</fullName>
            </value>
            <value>
                <fullName>Wailuku, HI</fullName>
            </value>
            <value>
                <fullName>Chicago, IL</fullName>
            </value>
            <value>
                <fullName>Glendale, AZ</fullName>
            </value>
            <value>
                <fullName>St. Paul, MN</fullName>
            </value>
            <value>
                <fullName>Dallas, TX</fullName>
            </value>
            <value>
                <fullName>Herndon, VA</fullName>
            </value>
            <value>
                <fullName>Washington, D.C.</fullName>
            </value>
            <value>
                <fullName>Remote</fullName>
            </value>
            <value>
                <fullName>Philadelphia, PA</fullName>
            </value>
            <value>
                <fullName>Washington</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>