force-app/main/default/objects/Staff__c/fields/PIV_Received__c.field-meta.xml
<CustomField>
    <fullName>PIV_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PIV Received</label>
    <type>Checkbox</type>
</CustomField>