force-app/main/default/objects/Staff__c/fields/Rational_Account__c.field-meta.xml
<CustomField>
    <fullName>Rational_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rational Account</label>
    <type>Checkbox</type>
</CustomField>