force-app/main/default/objects/Staff__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <description>Service department name</description>
    <inlineHelpText>Service department name</inlineHelpText>
    <label>Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CED</fullName>
            </value>
            <value>
                <fullName>COS</fullName>
            </value>
            <value>
                <fullName>CTCCS</fullName>
            </value>
            <value>
                <fullName>DAS</fullName>
            </value>
            <value>
                <fullName>DMC</fullName>
            </value>
            <value>
                <fullName>EBMD</fullName>
            </value>
            <value>
                <fullName>FAS</fullName>
            </value>
            <value>
                <fullName>FHS</fullName>
            </value>
            <value>
                <fullName>FMBT</fullName>
            </value>
            <value>
                <fullName>FOS</fullName>
            </value>
            <value>
                <fullName>FPS</fullName>
            </value>
            <value>
                <fullName>ITS</fullName>
            </value>
            <value>
                <fullName>ITS-ECD</fullName>
            </value>
            <value>
                <fullName>NCA</fullName>
            </value>
            <value>
                <fullName>OIT</fullName>
            </value>
            <value>
                <fullName>PMO</fullName>
            </value>
            <value>
                <fullName>FSS</fullName>
            </value>
            <value>
                <fullName>SPO-FMBT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>