force-app/main/default/objects/Staff__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Employee start date</description>
    <inlineHelpText>Employee start date</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>