force-app/main/default/objects/Staff__c/fields/WS__c.field-meta.xml
<CustomField>
    <fullName>WS__c</fullName>
    <label>WS</label>
    <length>150</length>
    <type>Text</type>
</CustomField>