force-app/main/default/objects/Staff__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Location__c</columns>
    <columns>Company__c</columns>
    <columns>Service__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Full_Time_or_Remote__c</columns>
    <columns>Staff_Status__c</columns>
    <columns>Comments__c</columns>
    <columns>Phone_Number__c</columns>
    <columns>Corporate_Email__c</columns>
    <columns>WS__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>